<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all_24dp"
        android:title="@string/select_all"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_select_inverse"
        android:icon="@drawable/ic_flip_to_back_24dp"
        android:title="@string/select_inverse"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mark_as_read"
        android:icon="@drawable/ic_eye_24dp"
        android:title="@string/mark_as_read"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_mark_as_unread"
        android:icon="@drawable/ic_eye_off_24dp"
        android:title="@string/mark_as_unread"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/action_bookmark"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_bookmark"
        android:icon="@drawable/ic_bookmark_off_24dp"
        android:title="@string/action_remove_bookmark"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_file_download_24dp"
        android:title="@string/download"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_downloads"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/remove_downloads"
        app:iconTint="?colorOnSurface"
        app:showAsAction="ifRoom" />

</menu>
